# pdf417

./: Cargo.toml  LICENSE  README.md
examples/: gs1.rs  micro_pdf417.rs  raw.rs  scaled.rs  segments.rs  simple.rs  test.rs  truncated.rs  utf8.rs
examples/utils/: mod.rs
src/: builder.rs  ecc.rs  high_level.rs  lib.rs  tables.rs
src/generators/: bitfield.rs  generator.rs  micro_pdf417.rs  mod.rs  pdf417.rs  row.rs
