[package]
name = "pdf417"
version = "0.3.0"
edition = "2021"
authors = ["Sofiane"]
description = "No-std PDF417 encoder"
documentation = "https://docs.rs/pdf417"
readme = "README.md"
repository = "https://github.com/Sofiman/pdf417/"
license-file = "LICENSE"
keywords = ["pdf417", "no-std", "embedded"]
categories = ["encoding", "embedded", "no-std"]
exclude = ["/images"]

[dependencies]
awint_core = { version = "0.17.0", default-features = false }
embedded-graphics = { version = "0.8.1", default-features = false, optional = true }

[features]
default = []
embedded-graphics = ["dep:embedded-graphics"]
